@@ -1,3 +1,6 @@
+2020-01-11  Franz Holzinger  <franz@ttproducts.de>
+    * update the template file for Indexed Search as Fluid Extension
+
 2019-10-03  Franz Holzinger  <franz@ttproducts.de>
     * add a wizard
     * modification according to the Coding Guidelines
